<resources>
    <string name="app_name">Plannerok</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_phone_number">Input phone number without country code</string>
    <string name="login_with_phone_number">Login with phone number</string>
    <string name="next">Next</string>
    <string name="input_verification_code_here">Input verification code here</string>
    <string name="finish">Finish</string>
    <string name="verification_code">Verification code</string>
    <string name="invalid_number_format">Invalid number format</string>
    <string name="please_wait">Please, wait…</string>
    <string name="code_mask">Code: _ _ _ _ _ _</string>
    <string name="code_mask_character">_</string>
    <string name="network_error_title">Network error is occurred</string>
    <string name="network_is_disabled">Network is disabled. Do you want to enable?</string>
    <string name="ok">OK</string>
    <string name="error_1s">Error: %1s</string>
    <string name="internal_error">Internal error</string>
    <string name="registration">Registration</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="username_limits">Username can consists of up to %1d english letters, %2d digits, %3d underscores</string>
    <string name="name_limits">Name must consists of up to %1d letters</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="about_me">About me</string>

    <string name="unknown">Unknown</string>

    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricorn">Capricorn</string>
    <string name="edit_profile">Edit profile</string>
    <string name="city">City</string>
    <string name="instagram">Instagram</string>
    <string name="vk">VK</string>
    <string name="birthdate">Birthdate</string>
    <string name="name_invalid">Name is incorrect</string>
    <string name="click_here_to_edit_birthdate">Click here to edit birthdate</string>
    <string name="permission_required">Permission is required!</string>
</resources>