<?xml version="1.0" encoding="utf-8"?>
<com.faltenreich.skeletonlayout.SkeletonLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_spacing"
    tools:context=".login.presentation.code.CodeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_spacing"
            android:text="@string/input_verification_code_here"
            android:textSize="@dimen/huge_title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/inputLayoutCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/editTextCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:padding="@dimen/medium_spacing"
                android:textAlignment="center"
                android:textSize="@dimen/huge_text_size"
                app:mask="@string/code_mask"
                app:maskCharacter="@string/code_mask_character"
                app:maskStyle="persistent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.faltenreich.skeletonlayout.SkeletonLayout>