<?xml version="1.0" encoding="utf-8"?>
<com.faltenreich.skeletonlayout.SkeletonLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.presentation.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:menu="@menu/edit_profile_menu"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="?attr/colorOnPrimary"
            app:title="@string/edit_profile"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:titleTextColor="?attr/colorOnPrimary" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_spacing">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/medium_spacing"
                android:paddingTop="@dimen/large_spacing"
                android:paddingBottom="@dimen/medium_spacing">

                <com.google.android.material.imageview.ShapeableImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/imageViewAvatar"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/small_spacing"
                    android:padding="2dp"
                    app:shapeAppearance="@style/circleImageView"
                    app:strokeColor="@android:color/darker_gray"
                    app:strokeWidth="1dp"
                    tools:src="@tools:sample/avatars" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputInstagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/instagram">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextInstagram"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputVk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vk">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextVk"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputAboutMe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/about_me">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextAboutMe"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputBirthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthdate">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextBirthdate"
                        android:inputType="none"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</com.faltenreich.skeletonlayout.SkeletonLayout>